Bug 1668492: Stop using locale based decimals when saving printing prefs. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D92099